<resources>
    <string name="app_name">The cheezery</string>
    <string name="welcome">Welcome to The Cheezery!</string>
    <string name="description">Home of the most wonderful desserts ever seen (and tested) by the human being.</string>
    <string name="get_started">Get started!</string>

    <!-- fonts families -->
    <string name="light">sans-serif-light</string>
    <string name="condensed">sans-serif-condensed</string>
    <string name="thin">sans-serif-thin</string>
    <string name="medium">sans-serif-medium</string>
    <string name="regular">sans-serif</string>

    <!-- menu fields -->
    <string name="menu_title">OUR MENU</string>
    <string name="btn1">Cold drinks</string>
    <string name="btn2">Hot drinks</string>
    <string name="btn3">Sweets</string>
    <string name="btn4">Salties</string>
    <string name="btn5">Combos</string>
    <string name="btn6">Personalised</string>
    <string name="title_activity_products">Products</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
